Fixed sidebar behavior on mobile.

--- a/_sass/michaelmov/sections/_sidebar.scss
+++ b/_sass/michaelmov/sections/_sidebar.scss
@@ -94,7 +94,7 @@
 
       .sidebar-nav {
         margin: 55px 0;
-          text-align: left;
+          text-align: center;
 
         ul {
           padding: 0;
